bigdata online ook werkend

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    In index Felix rerun
-    <a href="gps/voorbeeld.html">ga naar route</a>
+    In index Felix rerun<br>
+    <a href="gps/voorbeeld.html">ga naar route</a><br>
+    <a href="bigdata/pythonendpoints.html">ga naar bigdata</a>
 </body>
 </html>
