--- a/index.html
+++ b/index.html
@@ -5,10 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    In index Felix rerun<br>
-    <a href="gps/voorbeeld.html">ga naar route</a><br>
-    <a href="bigdata/pythonendpoints.html">ga naar bigdata</a>
+    <div class="container">
+        <nav class="navbar navbar-expand-sm navbar-light">
+            <a class="navbar-brand" href="#">
+                <span class="hidden">Juli Rennen</span>
+              </a>
+            <button 
+            	class="navbar-toggler" 
+            	type="button" 
+            	data-bs-toggle="collapse" 
+            	data-bs-target="#toggleMobileMenu" 
+            	aria-controls="toggleMobileMenu" 
+            	aria-expanded="false" 
+            	aria-label="Toggle navigation"
+            >
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="toggleMobileMenu">
+            
+                <ul class="navbar-nav ms-auto text-center">
+                    <li>
+                        <a class="nav-link" href="https://nice-sea-088835f03.1.azurestaticapps.net/">Home</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="https://nice-sea-088835f03.1.azurestaticapps.net/gps/voorbeeld.html">Route</a>
+                    </li>
+                    <li>
+                        <a class="nav-link" href="https://nice-sea-088835f03.1.azurestaticapps.net/bigdata/pythonendpoints.html">Bigdata</a>
+                    </li>
+                </ul>
+                
+
+            </div>
+        </nav>
+      </div>
 </body>
 </html>
