--- a/gps/voorbeeld.html
+++ b/gps/voorbeeld.html
@@ -151,7 +151,7 @@ $("#sendData").click(function(){
     $("#GPSxEnd").val(lon1);
     $("#GPSyStart").val(lon2);
     $("#GPSyEnd").val(lat2);
-
+    $("#photo").val();
     var myForm = document.getElementById('MapDataForm');
     myForm.submit();
       
