--- a/gps/voorbeeld.html
+++ b/gps/voorbeeld.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<form id = "MapDataForm" action="http://julirennen20220810171643.azurewebsites.net/" method="post" enctype="multipart/form-data">
+<form id = "MapDataForm" action="http://julirennen20220810171643.azurewebsites.net/Route/WelcomeUser" method="post" enctype="multipart/form-data">
     <span id="logsvf"></span>
     <div id="map" style="height:400px; width:900px;"></div>
     <input type="text" id="Distance" name="Distance" value="" style="display:none"/>
