--- a/gps/voorbeeld.html
+++ b/gps/voorbeeld.html
@@ -10,27 +10,50 @@
     <script src="bundle.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Lato:900,300' rel='stylesheet' type='text/css'>
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	
     <!-- end Leaflet map -->
 </head>
+<header>
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <div class="container">
+            <a class="navbar-brand" asp-area="" asp-page="/Index">JuliRennen</a>
+            </div>
+        </div>
+    </nav>
+</header>
+<body style="display:flex; flex-direction:column; min-height:100vh">
 
-<body>
-<form id = "MapDataForm" action="https://julirennen20220810171643.azurewebsites.net/Route/Index" method="post" enctype="multipart/form-data">
-    <span id="logsvf"></span>
-    <div id="map" style="height:400px; width:900px;"></div>
-    <input type="text" id="Distance" name="Distance" value="" style="display:none"/>
-    <input type="text" id="GPSxStart" name="GPSxStart" value="" style="display:none"/>
-    <input type="text" id="GPSxEnd" name="GPSxEnd" value="" style="display:none"/>
-    <input type="text" id="GPSyStart" name="GPSyStart" value="" style="display:none"/>
-    <input type="text" id="GPSyEnd" name="GPSyEnd" value="" style="display:none"/>
-    <input type="file" id="Photo" name="Photo" value="Upload a photo" />
-    <input type="textarea" id="PhotoData" name="PhotoData" value="" style="display:none" />
-    <input type="textarea" id="fileName" name="fileName" value="" style="display:none" />
-    <input type="button" id="sendData" value="Send data"/>
-</form>
 
-<input type="button" id="TakePhoto" value="Take Screenshot" />
+<div class="w3-row">
+    <div class="w3-card-4 w3-margin w3-white" style="width: 47% !important; float:left">
+        <span id="logsvf"></span>
+        <div id="map" style="height:400px; width:900px;"></div>
+    </div>
+    <div class="w3-card-4 w3-margin w3-white" style="float:left;">
+        <form id = "MapDataForm" action="http://localhost:5001/Route/Index" method="post" enctype="multipart/form-data">
+            
+            <input type="text" id="Distance" name="Distance" value="" style="display:none"/>
+            <input type="text" id="GPSxStart" name="GPSxStart" value="" style="display:none"/>
+            <input type="text" id="GPSxEnd" name="GPSxEnd" value="" style="display:none"/>
+            <input type="text" id="GPSyStart" name="GPSyStart" value="" style="display:none"/>
+            <input type="text" id="GPSyEnd" name="GPSyEnd" value="" style="display:none"/>
+            <input type="file" id="Photo" name="Photo" value="Upload a photo" />
+            <input type="textarea" id="PhotoData" name="PhotoData" value="" style="display:none" />
+            <input type="textarea" id="fileName" name="fileName" value="" style="display:none" />
+            <input type="button" id="TakePhoto" value="Take Screenshot" />
+            <input type="button" id="sendData" value="Send data"/>
+        </form>
+    </div>
+</div>
 </body>
+
+<footer class="" style="margin-top: auto; border-top: black; border-style: groove;">
+    <div class="container">
+        &copy; 2022 - JuliRennen - <a asp-area="" asp-page="/Privacy">Privacy</a>
+    </div>
+</footer> 
 
 <script>
 var lat1 = 0;
