--- a/gps/voorbeeld.html
+++ b/gps/voorbeeld.html
@@ -234,7 +234,7 @@ function getRoutes(){
     $.ajax({
         type: "POST",
             contentType: "application/x-www-form-urlencoded; charset=utf-8",
-            url: 'http://localhost:5234/Route/getRoutes',                                                        
+            url: 'https://julirennen20220810171643.azurewebsites.net/Route/getRoute',                                                        
             success: function (response) {     
                 console.log(response);                      
             },
